Fix no modal do avatar

--- a/src/app/avatar-creation/avatar-creation.component.html
+++ b/src/app/avatar-creation/avatar-creation.component.html
@@ -1,11 +1,13 @@
-<div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="avatarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
       <div class="modal-content">
-        <button	id="close-modal-login" type="text" class="close" data-target="" aria-label="Close" style="margin-left: 85%;margin-top: 2%; font-size: 10px"> 
-        <u>< VOLTAR</u></button>
+        <button type="button" class="close" data-toggle="modal" data-dismiss="modal" data-target="#modalMana1" style="margin-left: 85%;margin-top: 2%; font-size: 10px" aria-label="Close">
+            <span aria-hidden="true" style="font-size: 10px"> <u>< VOLTAR</u></span>
+        </button>
 
-        <h4 class="modal-title" id="configModalLabel" style="margin-left: 3%"> <B>CONFIGURAÇÃO DE AVATAR </B> </h4>
-        <h5 class="modal-title" id="configModalLabel2" style="margin-left: 3%"> É hora de criar sua versão virtual </h5>
+
+        <h5 class="modal-title" id="configModalLabel" style="margin-left: 3%; margin-top: -1%"> <B>CONFIGURAÇÃO DE AVATAR </B> </h5>
+        <h6 class="modal-title" id="configModalLabel2" style="margin-left: 3%"> É hora de criar sua versão virtual </h6>
         <h6 class="modal-title" id="configModalLabel3" style="color: rgb(211, 179, 0);margin-left: 3%"> Ulitize o botão de menu para navegar entre as opções de customização do Avatar </h6>
 
             <div class="modal-body">
