Modal para cadastro de projeto

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -80,7 +80,7 @@
                                                 </a>
                                             </div>
                                             <div class="col">
-                                                <a target="_blank">
+                                                <a href="#0" data-toggle="modal" data-target="#modalProject">
                                                     <img class="portfolio-item" [src]="addImg" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
@@ -161,3 +161,4 @@
           </div>
 
 <app-studentforms></app-studentforms>
+<app-projeto></app-projeto>
