--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -160,6 +160,61 @@
             </div>
           </div>
 
+          <button id="openAddResources" data-toggle="modal" data-target="#modalResources">RECURSOS ADICIONAIS</button>
+
+          <div class="modal fade" id="modalResources" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+              <div class="modal-content">
+                <button type="button" class="close" data-toggle="modal" data-dismiss="modal"style="margin-left: 85%;margin-top: 2%; font-size: 10px" aria-label="Close">
+                  <span aria-hidden="true" style="font-size: 10px"><u>< VOLTAR</u></span>
+               </button>
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">RECURSOS ADICIONAIS</h5>
+                </div>
+                <div class="modal-body" style="text-align: center;">
+                    <div>
+                      <h6>Clique nos botões abaixo e adicione recursos que complementam o seu projeto</h6>
+                    </div>
+                  <br/><br/>
+                  <div class="container-fluid">            
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Imagens</b></button>
+                      </div>
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Textos</b></button>
+                      </div>
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Mídias</b></button>
+                      </div>
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Documentos</b></button>
+                      </div>
+                    </div>
+                    <br/><br/>                    
+                    <div class="row">
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Arquivos</b></button>
+                      </div>
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Códigos</b></button>
+                      </div>
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Detalhes</b></button>
+                      </div>
+                      <div class="col-sm-3">
+                        <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Capa</b></button>
+                      </div>
+                    </div>    
+                  </div>
+                </div>
+                <br/>              
+                    <div class="modal-footer">
+                      <button class="btn btn-danger">FINALIZAR</button>          
+                    </div> 
+                </div>
+              </div>
+            </div>
+
 <app-studentforms></app-studentforms>
 <app-avatar-creation></app-avatar-creation>
-
