Modal cadastro de perfil concluído

--- a/src/app/avatar-creation/avatar-creation.component.html
+++ b/src/app/avatar-creation/avatar-creation.component.html
@@ -450,7 +450,7 @@
         
         <button id="reset" class="btn btn-outline-dark btn-sm"> Resetar Avatar</button>
         <button id="btnCompartilhar" class="btn btn-outline-dark btn-sm"> Compartilhar </button>
-        <button id="btnFinalizar" class="btn btn-lg btn-danger" data-dismiss="modal"> FINALIZAR </button>
+        <button id="btnFinalizar" class="btn btn-lg btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#modalFinished"> FINALIZAR </button>
 		
 		</div>
 	</div>
