--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -201,3 +201,21 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="modalFinished" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel"><b>Ufa! Agora sim!</b></h5>
+          </div>
+          <div class="modal-body" style="text-align: center;">
+            <h6>Você completou o seu cadastro com sucesso! Agora você é um ANTENADO!</h6>
+          </div>
+          <div class="modal-footer">
+            <div>
+              <button class="btn btn-danger" data-dismiss="modal">CONTINUAR</button>          
+            </div>
+          </div> 
+        </div>
+      </div>
+    </div>
