Avatar fix color

--- a/src/app/avatar-creation/avatar-creation.component.html
+++ b/src/app/avatar-creation/avatar-creation.component.html
@@ -8,7 +8,7 @@
 
         <h5 class="modal-title" id="configModalLabel" style="margin-left: 3%; margin-top: -1%"> <B>CONFIGURAÇÃO DE AVATAR </B> </h5>
         <h6 class="modal-title" id="configModalLabel2" style="margin-left: 3%"> É hora de criar sua versão virtual </h6>
-        <h6 class="modal-title" id="configModalLabel3" style="color: rgb(211, 179, 0);margin-left: 3%"> Ulitize o botão de menu para navegar entre as opções de customização do Avatar </h6>
+        <h6 class="modal-title" id="configModalLabel3" style="color:darkkhaki;margin-left: 3%"> Ulitize o botão de menu para navegar entre as opções de customização do Avatar </h6>
 
             <div class="modal-body">
 <!-- Html AVATAR, extenso código abaixo -->
