Modal Cadastro de Texto

--- a/src/app/projeto/projeto1.component.css
+++ b/src/app/projeto/projeto1.component.css
@@ -1,6 +1,10 @@
 #btn-recursos {
     width: 150px;
     height: 90px;
-    border-radius: 8px;
+    border-radius: 15px;
     text-align: center;
   }
+
+.form-control {
+    border-radius: 15px;  
+}
