--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -5,7 +5,8 @@
     <h1 id="home" class="display-4" style="color:white; display: inline; font-size: 25px">HOME - ANTENA CPS</h1>
   
     <div class="Entrar jumbrotron"> 
-        <button type="button" class="btn btn-danger btn-lg" id="openModal" data-toggle="modal" data-target="#modalLogin" style="width: 200px">ENTRAR</button>
+        <button type="button" class="btn btn-danger btn-lg" id="openModal" (click)="userLogin()" style="width: 200px">ENTRAR</button>
+        <button hidden data-toggle="modal" data-target="#modalLogin" id="openModal2"></button>
     </div> 
 
   </div>
