--- a/src/app/projeto/projeto1.component.css
+++ b/src/app/projeto/projeto1.component.css
@@ -8,3 +8,28 @@
 .form-control {
     border-radius: 15px;  
 }
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
