--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -43,3 +43,22 @@
    
 </div> 
 
+
+<!-- Modal -->
+<div class="modal fade" id="modalCont" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Bem vindo de volta</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <button id="btnUser" class="btn btn-success" data-dismiss="modal" data-toggle="modal" data-target="#modalLogin"></button>
+        <button class="btn btn-danger" data-dismiss="modal">Entrar com outra conta</button>
+      </div>
+    </div>
+  </div>
+</div>
+
