--- a/src/app/projeto/projeto.component.html
+++ b/src/app/projeto/projeto.component.html
@@ -11,89 +11,47 @@
             <div class="modal-body">
 
                 <div>
-                    <h6>Os projetos que você participa formam o seu portfólio</h6>
+                    <h4>Os projetos que você participa formam o seu portfólio</h4>
                 </div>
                 <form action="">
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="">Título do Projeto</label>
-                            <input type="text" class="form-control" id="" name="" placeholder="" [(ngModel)]="">
+                            <input type="text" class="form-control" id="" name="titulo" [(ngModel)]="model.titulo" placeholder="">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="">Orientador / Mentor / Colaborador</label>
-                            <input type="text" class="form-control" id="" name="sobrenome1" placeholder=""
-                                [(ngModel)]="">
+                            <input type="text" class="form-control" id="" name="orientador" [(ngModel)]="model.orientador" placeholder="">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="">Unidade(s)</label>
-                            <input type="text" class="form-control" id="" name="ra1" placeholder="{{ aluno.ra }}"
-                                value="{{ aluno.ra }}" [(ngModel)]="RA">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="">Curso(s)</label>
-                            <select id="" class="form-control">
-                                <option selected>{{ aluno.escola}}</option>
-                                <option>...</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="">Tema com o qual o projeto se alinha</label>
-                            <input type="email" class="form-control" id="" name="email1" placeholder="{{ aluno.email }}"
-                                value="{{ aluno.email }}" [(ngModel)]="email">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="">Coop(s)</label>
-                            <input type="text" class="form-control" id="" name="telefone1"
-                                placeholder="{{ aluno.telefone }}" value="{{ aluno.telefone }}" [(ngModel)]="telefone">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label for="">RG</label>
-                            <input type="text" class="form-control" id="" name="rg1" placeholder="{{ aluno.rg }}"
-                                value="{{ aluno.rg }}" [(ngModel)]="rg">
-                        </div>
-                        <div class="form-group col-md-4">
-                            <label for="">CPF</label>
-                            <input type="text" class="form-control" minlength="11" maxlength="11" mask="000.000.000-00"
-                                id="" name="cpf1" placeholder="{{ aluno.cpf }}" value="{{ aluno.cpf }}"
-                                [(ngModel)]="cpf">
-                        </div>
-                        <div class="form-group col-md-4">
-                            <label for="">Suas Redes Sociais</label>
-                            <div class="row">
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoFacebook"
-                                            alt=""></a></div>
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoGithub"
-                                            alt=""></a></div>
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoGoogle"
-                                            alt=""></a></div>
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoInstagram"
-                                            alt=""></a></div>
+                            <div class="form-row">
+                                <label for="">Tema com o qual o projeto se alinha</label>
+                                <input type="email" class="form-control" id="" name="tema" [(ngModel)]="model.tema" placeholder="" value="">
                             </div>
-                            <div class="row" style="margin-top:5%;">
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoLinkedin"
-                                            alt=""></a></div>
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoTwitter"
-                                            alt=""></a></div>
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoYoutube"
-                                            alt=""></a></div>
-                                <div class="col-md-3"><a href="#0"><img class="social-logo" [src]="logoPinterest"
-                                            alt=""></a></div>
+                            <div class="form-row">
+                                <label for="">Tipo de Projeto</label>
+                                <input type="text" class="form-control" id="" name="tipo" [(ngModel)]="model.tipo" placeholder="" value="">
+                            </div>
+                            <div class="form-row">
+                                <label for="">Status Atual do Projeto</label>
+                                <input type="text" class="form-control" id="" name="status" [(ngModel)]="model.status" placeholder="" value="">
                             </div>
                         </div>
+                        <div class="form-group col-md-6">
+                                <label for="">Descrição do Projeto</label>
+                                <textarea class="form-control" name="descricao" [(ngModel)]="model.descricao" id="" cols="60" rows="7" ></textarea>
+                            </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalProjectSuccess"
-                    data-dismiss="modal"">SALVAR</button>
-          <button type=" button" class="btn btn-danger">PRÓXIMO</button>
-            </div>
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalProjectSuccess"
+                        data-dismiss="modal">SALVAR</button>
+                    <button type=" button" class="btn btn-danger" data-toggle="modal" data-target="#modalProjectUnits"
+                        data-dismiss="modal">PRÓXIMO</button>
+                </div>
         </div>
     </div>
 </div>
@@ -112,9 +70,125 @@
                     botão "CONTINUAR" para concluir sua edição e voltar a sua página personalizada.</p>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">FINALIZAR</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">CONTINUAR</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="modalProjectUnits" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel"> Escolha a unidade e os colaboradores do projeto</h5>
+            </div>
+            <div class="modal-body">
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="">Coop(s)</label>
+                        <input type="text" class="form-control" id="" name="coop" [(ngModel)]="model.coop" placeholder="">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="">Unidade(s)</label>
+                        <select name="" id="" class="form-control">
+                            <option value=""></option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="">Curso(s)</label>
+                        <select name="" id="" class="form-control">
+                            <option value=""></option>
+                        </select>
+                    </div>
+                    <div class="form-group class-md-1" style="position: relative">
+                        <a href="#0" (click)="addCurso"><img [src]="divide" style="max-width: 20px; position: absolute; top: 50%;"></a>
+                    </div>
+                </div>
+                <div *ngFor="let coop of coops">
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label for="">Coop(s)</label>
+                            <input type="text" class="form-control" id="" name="" placeholder="">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="">Unidade(s)</label>
+                            <select name="" id="" class="form-control">
+                                <option value=""></option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="">Curso(s)</label>
+                            <select name="" id="" class="form-control">
+                                <option value=""></option>
+                            </select>
+                            <a href="#0" (click)="deleteCurso"><img [src]="divide" style="max-width: 20px"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
                 <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-                    data-target="#modalProfile">FINALIZAR</button>
-                <button type="button" class="btn btn-danger" data-dismis="modal">CONTINUAR</button>
+                    data-target="#modalResources" (click)="postProject()">CONTINUAR</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="modalResources" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">RECURSOS ADICIONAIS</h5>
+                <button type="button" class="close" data-dismiss="modal" data-toggle="modal" data-target="#modalProject"
+                    aria-label="Close">
+                    <span aria-hidden="true" id="close-modal-resources" style="font-size: 15px"> VOLTAR</span>
+                </button>
+            </div>
+            <div class="modal-body" style="text-align: center;">
+                <div>
+                    <h6>Clique nos botões abaixo e adicione recursos que complementam o seu projeto</h6>
+                </div>
+                <br /><br />
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Imagens</b></button>
+                        </div>
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Textos</b></button>
+                        </div>
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Mídias</b></button>
+                        </div>
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Documentos</b></button>
+                        </div>
+                    </div>
+                    <br /><br />
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Arquivos</b></button>
+                        </div>
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Códigos</b></button>
+                        </div>
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Detalhes</b></button>
+                        </div>
+                        <div class="col-sm-3">
+                            <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Capa</b></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br />
+            <div class="modal-footer">
+                <button class="btn btn-danger" data-dismiss="modal">FINALIZAR</button>
             </div>
         </div>
     </div>
