--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -17,31 +17,31 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="">Título do Projeto</label>
-                            <input type="text" class="form-control" id="" name="" placeholder="">
+                            <input type="text" class="form-control" id="" name="titulo" [(ngModel)]="model.titulo" placeholder="">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="">Orientador / Mentor / Colaborador</label>
-                            <input type="text" class="form-control" id="" name="sobrenome1" placeholder="">
+                            <input type="text" class="form-control" id="" name="orientador" [(ngModel)]="model.orientador" placeholder="">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <div class="form-row">
                                 <label for="">Tema com o qual o projeto se alinha</label>
-                                <input type="email" class="form-control" id="" name="email1" placeholder="" value="">
+                                <input type="email" class="form-control" id="" name="tema" [(ngModel)]="model.tema" placeholder="" value="">
                             </div>
                             <div class="form-row">
                                 <label for="">Tipo de Projeto</label>
-                                <input type="text" class="form-control" id="" name="rg1" placeholder="" value="">
+                                <input type="text" class="form-control" id="" name="tipo" [(ngModel)]="model.tipo" placeholder="" value="">
                             </div>
                             <div class="form-row">
                                 <label for="">Status Atual do Projeto</label>
-                                <input type="text" class="form-control" id="" name="rg1" placeholder="" value="">
+                                <input type="text" class="form-control" id="" name="status" [(ngModel)]="model.status" placeholder="" value="">
                             </div>
                         </div>
                         <div class="form-group col-md-6">
                                 <label for="">Descrição do Projeto</label>
-                                <textarea class="form-control" name="" id="" cols="60" rows="7"></textarea>
+                                <textarea class="form-control" name="descricao" [(ngModel)]="model.descricao" id="" cols="60" rows="7" ></textarea>
                             </div>
                     </div>
                 </form>
@@ -89,7 +89,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="">Coop(s)</label>
-                        <input type="text" class="form-control" id="" name="" placeholder="">
+                        <input type="text" class="form-control" id="" name="coop" [(ngModel)]="model.coop" placeholder="">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="">Unidade(s)</label>
@@ -97,12 +97,14 @@
                             <option value=""></option>
                         </select>
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         <label for="">Curso(s)</label>
                         <select name="" id="" class="form-control">
                             <option value=""></option>
                         </select>
-                        <a href="#0" (click)="addCurso"><img [src]="divide"></a>
+                    </div>
+                    <div class="form-group class-md-1" style="position: relative">
+                        <a href="#0" (click)="addCurso"><img [src]="divide" style="max-width: 20px; position: absolute; top: 50%;"></a>
                     </div>
                 </div>
                 <div *ngFor="let coop of coops">
@@ -122,15 +124,15 @@
                             <select name="" id="" class="form-control">
                                 <option value=""></option>
                             </select>
-                            <a href="#0" (click)="deleteCurso"><img [src]="divide"></a>
+                            <a href="#0" (click)="deleteCurso"><img [src]="divide" style="max-width: 20px"></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">FINALIZAR</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
                 <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-                    data-target="#modalResources">CONTINUAR</button>
+                    data-target="#modalResources" (click)="postProject()">CONTINUAR</button>
             </div>
         </div>
     </div>
